frontend/test/should_pass/retype_008.grg
using attrib_model_001;

rule r {
	-e:EINT->;
	-f:EBOOL->;

	modify {
		- ee:typeof(f)<e> ->;
	}
}
