frontend/test/should_fail/delretypesame_004b_e.grg
rule r{	-e:Edge->;	p:P1(e);		modify {		delete(e);		p();	}}pattern P1(-e:Edge->){	p:P2(e);		modify {		p();	}}pattern P2(-e:Edge->){	modify {		-f:Edge<e>->;	}}